#test Writing tests for the validation to do with unique long and short group names